se cambia estilo y se suben imagenes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <!-- SE PONE RUTA RELATIVA-->
+    <link rel="stylesheet" href="./src/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;700;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
@@ -14,7 +15,8 @@
     <main class="main-content">
         <header class="header-banner">
             <h1 class="main-title">Amigo Secreto</h1>
-            <img src="assets/DALL·E 2025-03-17 18.05.23 - A digital illustration featuring the words 'Amigo Secreto' in elegant, bold cursive font at the top center. Surrounding the text, there are adorable S.webp" alt="Imagen representativa de amigo secreto">
+             <!-- SE PONE RUTA RELATIVA-->
+            <img src="./src/img/perritos.jpg" alt="Imagen representativa de amigo secreto">
         </header>
         
         <section class="input-section">
@@ -29,7 +31,8 @@
 
             <div class="button-container">
                 <button class="button-draw" onclick="sortearAmigo()" aria-label="Sortear amigo secreto">
-                    <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
+                     <!-- SE PONE RUTA RELATIVA-->
+                    <img src="./src/img/play_circle_outline.png" alt="Ícono para sortear">
                     Sortear amigo
                 </button>
             </div>
